--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,7 +31,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./containerfile
+        file: ./Containerfile
         push: true
         tags: |
           registry.cyberzone.dev/bots/vk-ds:${{ steps.sha.outputs.sha }}
